# dc2json2dc

./: .gitignore  README.md  pyproject.toml
src/dc2json2dc/: __init__.py  json.py
tests/: dataclasses_json.py  entities.py  test_annotations.py  test_api.py  test_collection_of_unions.py  test_collections.py  test_enum.py  test_examples.py  test_generic_dataclass.py  test_invariants.py  test_metadata.py  test_nested.py  test_recursive.py  test_self.py  test_time.py  test_tuples.py  test_unsupported_generics.py
tests/hypothesis2/: strategies.py
