[project]
name = "dc2json2dc"
version = "0.1.0"
description = "Convert dataclasses to JSON and vice versa"
readme = "README.md"
authors = [
    { name = "Léon Planken", email = "l.r.planken@tudelft.nl" }
]
requires-python = ">=3.10"
dependencies = [
    "typing_extensions>=4.15.0",
]


[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-codspeed>=4.0.0",
    "pytest-sugar>=1.0.0",
    "codecov>=2.1.13",
]


[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "dc2json2dc"
module-root = "src"


[tool.mypy]
ignore_missing_imports = true



[tool.ruff]
line-length = 79


[tool.ruff.lint]
select = [
    "E", "F", "I", "NPY", "PYI", "Q", "RET", "RSE", "RUF", "SLF", "SIM", "TC"
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # ignore unused module imports


[tool.ruff.lint.isort]
known-first-party = ["dc2json2dc", "tests"]


[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=xml"
testpaths = ["tests"]


[tool.coverage.run]
omit = [
    "docs/*",
    "tests/*",
    "benchmarks/*",
    "conftest.py",
]
